@@ -2,45 +2,55 @@ package io.github.dilluter.exception;
 
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.MethodArgumentNotValidException;
-import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
-import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
-@ControllerAdvice
 public class ExceptionHandlerController {
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ApiErrors handleValidationErros(MethodArgumentNotValidException ex) {
+    public ResponseEntity<ApiErrors> handleValidationErrors(MethodArgumentNotValidException ex) {
         BindingResult bindingResult = ex.getBindingResult();
-        List<String> messages = bindingResult.getAllErrors()
-                .stream()
-                .map(objectError -> objectError.getDefaultMessage())
-                .collect(Collectors.toList());
-        return new ApiErrors(messages);
+
+        List<String> messages = bindingResult.getAllErrors().stream().map(error -> error.getDefaultMessage()).toList();
+
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(new ApiErrors(messages));
+    }
+
+    @ExceptionHandler(NotFoundException.class)
+    public ResponseEntity<ApiErrors> handleNotFoundException(NotFoundException ex) {
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(new ApiErrors(ex.getMessage()));
+    }
+
+    @ExceptionHandler(BusinessException.class)
+    public ResponseEntity<ApiErrors> handleBusinessException(BusinessException ex) {
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(new ApiErrors(ex.getMessage()));
+    }
+
+    @ExceptionHandler(BadCredentialsException.class)
+    public ResponseEntity<ApiErrors> handleBadCredentialsException(BadCredentialsException ex) {
+        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(new ApiErrors("Usuário ou senha inválidos."));
     }
 
     @ExceptionHandler(ResponseStatusException.class)
-    public ResponseEntity handleResponseStatusException(ResponseStatusException ex) {
-        String messagemErro = ex.getMessage();
-        HttpStatusCode codigoStatus = ex.getStatusCode();
-        ApiErrors apiErrors = new ApiErrors(messagemErro);
-        return new ResponseEntity(apiErrors, codigoStatus);
+    public ResponseEntity<ApiErrors> handleResponseStatusException(ResponseStatusException ex) {
+        return ResponseEntity.status(ex.getStatusCode()).body(new ApiErrors(ex.getReason()));
     }
+
     @ExceptionHandler(DataIntegrityViolationException.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ApiErrors handleDataIntegrityViolation(DataIntegrityViolationException ex) {
-        String mensagem = "Já existe um cliente com esse CPF.";
-        return new ApiErrors(mensagem);
+    public ResponseEntity<ApiErrors> handleDataIntegrityViolation(DataIntegrityViolationException ex) {
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(new ApiErrors("Violação de integridade no banco de dados."));
+    }
+
+    @ExceptionHandler(Exception.class)
+    public ResponseEntity<ApiErrors> handleGenericException(Exception ex) {
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(new ApiErrors("Erro interno no servidor."));
     }
 }
